fdo#72157: webdav: Release WebDAV file lock on document close.

Make it work with both serf and neon version.

Change-Id: I3c74ba57cde19f4417d0229c1c809756e3c5f9f8