ucb/source/ucp/webdav/webdavcontent.cxx
@@ -207,6 +207,7 @@ Content::Content(
   m_eResourceType( UNKNOWN ),
   m_pProvider( pProvider ),
   m_bTransient( false ),
+  m_bLocked( false ),
   m_bCollection( false ),
   m_bDidGetOrHead( false )
 {
@@ -239,6 +240,7 @@ Content::Content(
   m_eResourceType( UNKNOWN ),
   m_pProvider( pProvider ),
   m_bTransient( true ),
+  m_bLocked( false ),
   m_bCollection( isCollection ),
   m_bDidGetOrHead( false )
 {
@@ -259,6 +261,8 @@ Content::Content(
 // virtual
 Content::~Content()
 {
+    if (m_bLocked)
+        unlock(uno::Reference< ucb::XCommandEnvironment >());
 }
 
 
@@ -2944,6 +2948,7 @@ void Content::lock(
             uno::Sequence< OUString >() );
 
         xResAccess->LOCK( aLock, Environment );
+        m_bLocked = true;
 
         {
             osl::Guard< osl::Mutex > aGuard( m_aMutex );
@@ -2971,6 +2976,7 @@ void Content::unlock(
         }
 
         xResAccess->UNLOCK( Environment );
+        m_bLocked = false;
 
         {
             osl::Guard< osl::Mutex > aGuard( m_aMutex );
